--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,7 +20,7 @@
   background: transparent;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: #83ddc8;
+  background: #5770E5;
 }
 
 /*------------------------------------------------------------------------------*/
